--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build --base=/password-generator/",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
